# LifeSchedulerFramework

./: CMakeLists.txt  README.md
libLifeSchedulerFramework/: Item.cpp  Item.h  Item.test.cpp  ItemList.cpp  ItemList.h  ItemList.test.cpp  LifeSchedulerFramework.cpp  LifeSchedulerFramework.h  Tag.cpp  Tag.h  Tag.test.cpp  dummy.test.cpp
